# Enterprise-AI_Knowledge

./: .gitignore  APPLY.md  IMPLEMENTATION_NOTES.md  MANIFEST.txt  README.md  README_KARPATHY_WIKI_PHASE1.md  VALIDATION.md
apps/api/: .dockerignore  .env.example  Dockerfile  knowledge_assistant.db-shm  knowledge_assistant.db-wal  pyproject.toml
apps/api/evaluation/: example_dataset.jsonl  example_wiki_dataset.jsonl
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0826fea916a6_create_document_chunks_table.py  4d2e7f1a9b3c_create_wiki_page_revisions.py  6d742e35c230_initial_sqlite_schema.py  79e67fa88d9d_create_wiki_tables.py  8c41b7e29a6d_make_wiki_document_optional.py  a18b2c3d4e5f_create_wiki_conflicts.py  b7f2d4a6c8e1_create_wiki_intelligence_tables.py  c77fa0bd1b98_create_documents_table.py  c9d8e7f6a5b4_create_processing_jobs.py  d4e8f1a2b3c4_secure_auth_and_profile.py  e5f6a7b8c9d0_document_intelligence_and_usage.py
apps/api/scripts/: evaluate_rag.py  evaluate_wiki.py  test_composite_text_extractor.py  test_docx_text_extractor.py  test_embedding_service.py  test_pdf_text_extractor.py  test_recursive_text_chunker.py  test_txt_text_extractor.py  test_vector_search.py
apps/api/tests/: conftest.py  test_account_security_service.py  test_auth.py  test_bm25_retrieval.py  test_delete_document.py  test_document_intelligence_basics.py  test_global_wiki_compilation.py  test_global_wiki_page.py  test_openrouter_wiki_source_validation.py  test_processing_job.py  test_query_rewriting_and_compression.py  test_retrieval_metrics.py  test_wiki_claim_citations.py  test_wiki_conflict.py  test_wiki_maintenance.py  test_wiki_quality.py  test_wiki_revision.py  test_wiki_revision_diff.py  test_wiki_semantic_matcher.py
docs/: ROADMAP.md
(+156 files in other folders)
