[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-ai-knowledge-assistant-api"
version = "0.1.0"
description = "Backend API for the Enterprise AI Knowledge Assistant"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.14,<2.0",
    "redis>=5.2,<6.0",
    "qdrant-client>=1.13,<2.0",
    "minio>=7.2,<8.0",
    "structlog>=24.4,<26.0",
    "httpx>=0.28,<1.0",
    "prometheus-client>=0.21,<1.0",
    "opentelemetry-api==1.44.0",
    "opentelemetry-sdk==1.44.0",
    "opentelemetry-instrumentation-fastapi==0.65b0",
    "pyjwt[crypto]>=2.10,<3.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "python-multipart>=0.0.20,<1.0",
    "email-validator>=2.2,<3.0",
    "transformers>=4.41,<5.0",
    "numpy>=1.26,<2.0",
    "torch==2.2.2",
    "chromadb>=1.5,<2.0",
    "sentence-transformers>=5.6,<6.0",
    "pypdf>=6.0,<7.0",
    "python-docx>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]